--- a/index.html
+++ b/index.html
@@ -689,14 +689,9 @@
                                             <circle cx="100" cy="100" r="66" fill="url(#silver)" stroke="#999" stroke-width="1"/>
                                             <circle cx="100" cy="100" r="64" fill="none" stroke="#ffffff" stroke-width="1" opacity="0.6"/>
                                             
-                                            <!-- Coat of Arms (Mount Ararat inside Shield) -->
-                                            <g filter="url(#emboss)" fill="#666">
-                                                <path d="M 100,55 C 125,55 135,75 130,110 C 125,130 110,145 100,150 C 90,145 75,130 70,110 C 65,75 75,55 100,55 Z" fill="none" stroke="#666" stroke-width="3"/>
-                                                <!-- Sis and Masis peaks -->
-                                                <path d="M 73,110 L 87,80 L 102,110 Z" fill="#666"/>
-                                                <path d="M 94,110 L 118,65 L 129,110 Z" fill="#666"/>
-                                                <rect x="70" y="112" width="60" height="4" fill="#666"/>
-                                            </g>
+                                            <!-- Real Coat of Arms from Wikipedia -->
+                                            <image href="https://upload.wikimedia.org/wikipedia/commons/0/0f/Coat_of_arms_of_Armenia.svg" x="46" y="38" width="108" height="108" filter="url(#emboss)" preserveAspectRatio="xMidYMid meet" opacity="0.85" />
+
                                             
                                             <!-- Golden Ring Text -->
                                             <text font-family="'Inter', sans-serif" font-weight="900" font-size="14" fill="#6b5300" filter="url(#emboss)" letter-spacing="1">
