--- a/index.html
+++ b/index.html
@@ -533,6 +533,16 @@
                             <input type="range" id="galton-rows" min="8" max="16" value="12" step="1" oninput="document.getElementById('row-val').innerText=this.value; setTimeout(initGalton, 100);">
                             <div style="text-align:right; font-size:0.8rem; color:#aaa;"><span id="row-val">12</span> Rows</div>
                         </div>
+
+                        <div class="control-group">
+                            <label data-i18n="galton_speed_label">Simulation Speed</label>
+                            <input type="range" id="galton-speed" min="1" max="15" value="3" step="1">
+                        </div>
+
+                        <div class="control-group">
+                            <label data-i18n="galton_bounce_label">Elasticity (Bounce)</label>
+                            <input type="range" id="galton-bounce" min="0.1" max="0.9" value="0.6" step="0.05">
+                        </div>
                         
                         <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
                              <button class="glow-btn small" onclick="dropGaltonBalls(1)" data-i18n="btn_drop_1">+1 Ball</button>
